tests/sksl/errors/SwizzleTooManyComponents.dsl.glsl
### Compilation failed:

error: invalid swizzle

1 error
